--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-resource": "^1.5.8",
-    "bootstrap-select": "^1.11.2"
+    "angular-route": "^1.5.8",
+    "jquery": "^3.1.0"
   }
 }
