--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
   },
   "homepage": "https://github.com/artsiomshushkevich/NYT-books#readme",
   "devDependencies": {
+    "angular-mocks": "^1.5.8",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
-    "gulp-webserver": "^0.9.1"
+    "gulp-webserver": "^0.9.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2"
   },
   "dependencies": {
     "angular": "^1.5.8",
