--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "homepage": "https://github.com/artsiomshushkevich/NYT-books#readme",
   "devDependencies": {
     "angular-mocks": "^1.5.8",
+    "babel-preset-es2015": "^6.16.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
