--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nyt-books",
   "version": "1.0.0",
-  "description": "apllication wich uses angular\u001bangularjs applcation wich uses New York Times API",
+  "description": "Application wich uses New York Times API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -40,6 +40,9 @@
     "angular-cookies": "^1.5.8",
     "angular-resource": "^1.5.8",
     "angular-route": "^1.5.8",
-    "jquery": "^3.1.0"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "jquery": "^3.1.0",
+    "mongoose": "^4.6.3"
   }
 }
