--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "angular-route": "^1.5.8",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-validator": "^2.20.10",
     "jquery": "^3.1.0",
     "mongoose": "^4.6.3"
   }
