--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "angular-cookies": "^1.5.8",
     "angular-resource": "^1.5.8",
     "angular-route": "^1.5.8",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
